--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://postgresql.javapipeline.svc:5432/sampledb
 spring.datasource.username = postgres
 spring.datasource.password = admin
 
