--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,21 @@
 				    <skipTests>true</skipTests>
 				</configuration>
 		       </plugin>
+			
+			<plugin>
+			  <groupId>io.fabric8</groupId>
+			  <artifactId>fabric8-maven-plugin</artifactId>
+			  <version>4.3.1</version>
+			  <executions>
+			    <execution>
+			      <id>fmp</id>
+			      <goals>
+				<goal>resource</goal>
+				<goal>build</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+			</plugin>
 		</plugins>
 	</build>
 
